apps/openformulieren/additionalmanifests/655-dmn-poc/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openformulieren
  namespace: publicground
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: main-gateway
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - "openformulieren.dmn-poc.publicground.nl"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: openformulieren-openforms-nginx
          port: 80
          weight: 1
